still playing around
Figuring out some stuff WRT forms and how to pull out what is submitted.

--- a/SliderSurvey/Content/SliderStuff.css
+++ b/SliderSurvey/Content/SliderStuff.css
@@ -14,3 +14,9 @@ span.secondcolumn {
     word-spacing: 0;
     width: 200px;
 }
+
+.amount {
+    border: 0;
+    color: #f6931f;
+    font-weight: bold;
+}
